--- a/index.html
+++ b/index.html
@@ -1,2 +1,10 @@
 <h1>Это моя первая программа!</h1>
 <h3> подзаголовок</h3>
+<!doctype html>
+<html lang="en">
+<head>
+<title>Продажа билетов в кино в Иннополисе</title>
+</head>
+<body>
+</body>
+</html>
