Релиз 2.3 Исправлен выбор ряда

--- a/index.html
+++ b/index.html
@@ -212,14 +212,14 @@
         </div>
         <div>
             <label for="first">Ряд 1</label>
-            <input id="first" type="radio" value="1">
+            <input id="first" type="radio" name="line" value="1">
             <label for="second">Ряд 2</label>
-            <input id="second" type="radio" value="2">
+            <input id="second" type="radio" name="line" value="2">
             <label for="third">Ряд 3</label>
-            <input id="third" type="radio" value="3">
+            <input id="third" type="radio" name="line" value="3">
         </div>
         <div>
-            <select required>
+            <select name="place" required>
                 <option>Выберете место</option>
                 <option value="1">Место 1</option>
                 <option value="2">Место 2</option>
