Готова таблица с фильмами (4 колонки)

--- a/index.html
+++ b/index.html
@@ -73,15 +73,17 @@
             <table class="movie-list__table">
                 <thead>
                     <tr>
-                        <th id="t1">Time</th>
-                        <th id="t2">Stuff that will happen</th>
-                        <th></th>
+                        <th class="col-1"><a href="#">Начало сеанса <span class="triangle-up"></span></a></th>
+                        <th><a href="#">Название фильма <span class="triangle-down"></span></a></th>
+                        <th>Жанр</th>
+                        <th class="col-4"></th>
                     </tr>
                 </thead>
                 <tbody>
-                    <tr class="noteven">
-                        <td id="td1">10am - 12pm</td>
-                        <td>Introduction and presentation about Envato</td>
+                    <tr>
+                        <td class="centr">10:00</td>
+                        <td><a href="https://www.kinopoisk.ru/film/chelovek-pauk-2002-838/" target="_blank">Человек-паук</a></td>
+                        <td>фантастика, боевик, приключения</td>
                         <td id="t3"><svg 
                             xmlns="http://www.w3.org/2000/svg"
                             xmlns:xlink="http://www.w3.org/1999/xlink"
@@ -90,9 +92,10 @@
                             d="M16.505,32.994 C7.393,32.994 0.005,25.606 0.005,16.494 C0.005,7.381 7.393,-0.006 16.505,-0.006 C25.618,-0.006 33.005,7.381 33.005,16.494 C33.005,25.606 25.618,32.994 16.505,32.994 ZM24.214,14.591 L18.356,14.631 L18.356,8.796 L13.958,8.778 L13.958,14.637 L8.083,14.637 L8.083,19.074 L13.958,19.074 L13.958,24.889 L18.336,24.889 L18.307,19.074 L24.231,19.074 L24.214,14.591 Z"/>
                         </svg></td>
                     </tr>
-                    <tr class="even">
-                        <td id="td1">12pm - 02pm</td>
-                        <td>Sessions by honorable guests and Speakers</td>
+                    <tr>
+                        <td class="centr">12:00</td>
+                        <td><a href="https://www.kinopoisk.ru/film/1122114/" target="_blank">Собачья жизнь 2</a></td>
+                        <td>фэнтези, драмма, комедия</td>
                         <td><svg 
                             xmlns="http://www.w3.org/2000/svg"
                             xmlns:xlink="http://www.w3.org/1999/xlink"
@@ -101,9 +104,10 @@
                             d="M16.505,32.994 C7.393,32.994 0.005,25.606 0.005,16.494 C0.005,7.381 7.393,-0.006 16.505,-0.006 C25.618,-0.006 33.005,7.381 33.005,16.494 C33.005,25.606 25.618,32.994 16.505,32.994 ZM24.214,14.591 L18.356,14.631 L18.356,8.796 L13.958,8.778 L13.958,14.637 L8.083,14.637 L8.083,19.074 L13.958,19.074 L13.958,24.889 L18.336,24.889 L18.307,19.074 L24.231,19.074 L24.214,14.591 Z"/>
                         </svg></td>
                         </tr>
-                    <tr class="noteven">
-                        <td id="td1">02pm - 03pm</td>
-                        <td>Break and Mingle time with the authors</td>
+                    <tr>
+                        <td class="centr">14:00</td>
+                        <td><a href="https://www.kinopoisk.ru/film/istoriya-igrushek-4-2019-846824/" target="_blank">История игрушек 4</a></td>
+                        <td>мультфильм, фэнтези, комедия</td>
                         <td><svg 
                             xmlns="http://www.w3.org/2000/svg"
                             xmlns:xlink="http://www.w3.org/1999/xlink"
@@ -112,9 +116,10 @@
                             d="M16.505,32.994 C7.393,32.994 0.005,25.606 0.005,16.494 C0.005,7.381 7.393,-0.006 16.505,-0.006 C25.618,-0.006 33.005,7.381 33.005,16.494 C33.005,25.606 25.618,32.994 16.505,32.994 ZM24.214,14.591 L18.356,14.631 L18.356,8.796 L13.958,8.778 L13.958,14.637 L8.083,14.637 L8.083,19.074 L13.958,19.074 L13.958,24.889 L18.336,24.889 L18.307,19.074 L24.231,19.074 L24.214,14.591 Z"/>
                         </svg></td>
                     </tr>
-                    <tr class="even">
-                        <td id="td1">03pm - 05pm</td>
-                        <td>Portfolio Review, Rewards and Ending Presentation</td>
+                    <tr>
+                        <td class="centr">16:00</td>
+                        <td><a href="https://www.kinopoisk.ru/film/693730/" target="_blank">Люди в черном: Интернэшнл</a></td>
+                        <td>фантастика, боевик, приключения</td>
                         <td><svg 
                             xmlns="http://www.w3.org/2000/svg"
                             xmlns:xlink="http://www.w3.org/1999/xlink"
