Убран float из первого блока

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 <body>
     <div class="block-01">
         <header>
+            <nav>
                 <div class="block-01__logo">
                     <a href="http://university.innopolis.ru" >
                     <img src="img/logo.png" alt="">
@@ -26,9 +27,10 @@
                     <li><a href="#">Past events</a></li>
                     <li><a href="#">Contact</a></li>
                 </ul>
+            </nav>
+            <h1>Закажите билет в кино</h1>
+            <h2>Всем покупателям подарок!</h2>
         </header>
-        <h1>Закажите билет в кино</h1>
-        <h2>Всем покупателям подарок!</h2>
     </div>
 
 
