Убраны все замечания

--- a/index.html
+++ b/index.html
@@ -24,11 +24,12 @@
                     </a>
                 </div>
                 <ul>
-                    <li><a href="#">Event details </a></li>
-                    <li><a href="#">Speakers</a></li>
-                    <li><a href="#">Sponsors </a></li>
-                    <li><a href="#">Past events</a></li>
-                    <li><a href="#">Contact</a></li>
+                    <li><a href="#">Заказать билет</a></li>
+                    <li><a href="#block-02">Преимущества</a></li>
+                    <li><a href="#block-05">Фильмы</a></li>
+                    <li><a href="#">Контакты</a></li>
+                    <li>Ваш город:</li>
+                    <li><a href="#">Москва</a></li>
                 </ul>
             </nav>
             <h1>Закажите билет в кино</h1>
@@ -37,6 +38,7 @@
     </div>
 
     <!-- ПРЕИМУЩЕСТВА -->
+    <p><a name="block-02"></a></p>
     <div class="block-02">
         <div class="block-02__info-wrap">
             <div class="block-02__info">
@@ -175,7 +177,7 @@
             <h4>Фильмы</h4>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab adipisci alias, animi, commodi eius ipsum,<br>laudantium neque nihil omnis perferendis sed sequi tempore! Ad ea esse ex inventore repudiandae, suscipit!</p>    
         </div> 
-
+        <p><a name="block-05"></a></p>
         <div class="block-05__row">
             <!-- <div class="block-05__col block-05__empty">
             </div> -->
