--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <title>Cinema project</title>
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/media.css">
     <style> svg g:hover{filter: url(#Filter_2)}</style>
 </head>
 
@@ -22,6 +23,9 @@
                     <a href="http://university.innopolis.ru" >
                     <img src="img/logo.png" alt="">
                     </a>
+                </div>
+                <div class="block-01__menu_burger">
+                    <span></span>
                 </div>
                 <ul>
                     <li><a href="#">Заказать билет</a></li>
@@ -1187,7 +1191,7 @@
                 xmlns:xlink="http://www.w3.org/1999/xlink"
                 viewBox="0 0 49 49">
                 <defs>
-                <filter filterUnits="userSpaceOnUse" id="Filter_1" x="0px" y="0px" width="48px" height="48px"  >
+                <filter filterUnits="userSpaceOnUse" id="Filter_1" x="0px" y="0px" width="48" height="48"  >
                     <feOffset in="SourceAlpha" dx="0" dy="1" />
                     <feGaussianBlur result="blurOut" stdDeviation="1.5" />
                     <feFlood flood-color="rgb(0, 0, 0)" result="floodOut" />
@@ -1198,7 +1202,7 @@
                     <feMergeNode in="SourceGraphic"/>
                 </feMerge>
                 </filter>
-                <filter filterUnits="userSpaceOnUse" id="Filter_2" x="0px" y="0px" width="48px" height="48px"  >
+                <filter filterUnits="userSpaceOnUse" id="Filter_2" x="0px" y="0px" width="48" height="48"  >
                     <feOffset in="SourceAlpha" dx="0" dy="1" />
                     <feGaussianBlur result="blurOut" stdDeviation="0" />
                     <feFlood flood-color="rgb(0, 0, 0)" result="floodOut" />
