--- a/index.html
+++ b/index.html
@@ -1410,6 +1410,7 @@
         $('.owl-carousel').owlCarousel({
             loop:true,
             margin:10,
+            // autoWidth: true,
             nav:true,
             responsive:{
                 0:{
