Релиз 4.5 + в лендинге город убран из списка

--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
     <!-- ШАПКА -->
     <div class="block-01">
         <header>
+            <div class="block-01__logo">
+                <a href="http://university.innopolis.ru" >
+                <img src="img/logo.png" alt="">
+                </a>
+            </div>
             <nav>
-                <div class="block-01__logo">
-                    <a href="http://university.innopolis.ru" >
-                    <img src="img/logo.png" alt="">
-                    </a>
-                </div>
                 <div class="block-01__menu_burger">
                     <span></span>
                 </div>
@@ -34,9 +34,11 @@
                     <li><a href="#block-02">Преимущества</a></li>
                     <li><a href="#block-05">Фильмы</a></li>
                     <li><a href="#">Контакты</a></li>
-                    <li>Ваш город:</li>
-                    <li><a href="#">Москва</a></li>
                 </ul>
+                <div class= "block-01__your_city">
+                    <span>Ваш город:</span>
+                    <span><a href="#">Москва</a></span>
+                </div>
             </nav>
             <h1>Закажите билет в кино</h1>
             <h2>Всем покупателям подарок!</h2>
