Релиз 4.7 + исправлены оба калькулятора + лендинг

--- a/4.5/test_4.5.html
+++ b/4.5/test_4.5.html
@@ -26,7 +26,8 @@
     
     <p id="out_key"></p>
     <p id="out_val"></p>
-    <script src="js/test_4.5.js"></script>
+    <script src="test_4.5.js"></script>
+    
 </body>
 
 </html>
