--- a/4.6/test_4.6.html
+++ b/4.6/test_4.6.html
@@ -40,7 +40,7 @@
     <p id="result_4"></p>
 
     
-    <script src="js/test_4.6.js"></script>
+    <script src="test_4.6.js"></script>
 </body>
 
 </html>
