--- a/4.2_Calc/indexCalc.html
+++ b/4.2_Calc/indexCalc.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <title>Калькулятор</title>
-<link rel="stylesheet" href="css/style.css">
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
 <div id="calculator">
@@ -30,6 +30,6 @@
         <span class="operator">x</span>
     </div>
 </div>
-<script src="js/index.js"></script>
+<script src="index.js"></script>
 </body>
 </html>
