сделана таблица и форма заказа

--- a/4.6/test_4.6.html
+++ b/4.6/test_4.6.html
@@ -14,6 +14,9 @@
     <div>
         <input id='name__input' type='text' placeholder="your name" >
     </div>
+    <button id="first">
+        Решение
+    </button>
     <p>Ответ:</p>
     <p id="out_name"></p>
 
@@ -24,6 +27,9 @@
     <div>
         <input id='number_2' type='text' placeholder="число 2" >
     </div>
+    <button id="second">
+        Решение
+    </button>
     <p>Ответ по условию задачи 2:</p>
     <p id="result_2"></p>
     <p>Ответ по условию задачи 3:</p>
@@ -36,6 +42,9 @@
     <div>
         <input id='max' type='text' placeholder="max" >
     </div>
+    <button id="third">
+        Решение
+    </button>
     <p>Ответ:</p>
     <p id="result_4"></p>
 
