--- a/index.html
+++ b/index.html
@@ -382,18 +382,27 @@
                 <span>Жанр:</span>
                 <span id="block-08__film-genre"></span>
             </div>
-            <div class="block-price">
+            <div class="block-08__price">
                 <span>Стоимость билета:</span>
                 <span id="block-08__film-price">0</span>
                 <span>руб.</span>
             </div>
-            <div>
+            <!-- <div>
                 <div>Количество билетов:</div>
                 <input type="number" min="1" max="50" value="1" step="1" id="block-08__film-value">
             </div>
             <div class="block-08__total">
                 <span>Итого:</span>
                 <span id="block-08__total-price">0</span>
+                <span>руб.</span>
+            </div> -->
+            <div>Выбранное место:</div>
+            <div>
+                <input type="text" name="place" id="block-08__chosen_place" placeholder="Выбранное место">
+            </div>
+            <div class="block-08__price2">
+                <span>Стоимость билета:</span>
+                <span id="block-08__film-price2">0</span>
                 <span>руб.</span>
             </div>
             <div>
@@ -405,7 +414,8 @@
             <div>
                 <button id="block-08__book" class="button" type="submit">Забронировать</button>
             </div>
-            
+            <div class="block-08__places">
+            </div>
         </div>
     </div>
 
@@ -416,25 +426,7 @@
     <script src="js/getPresent.js"></script>
     <script src="js/jquery-3.4.1.min.js"></script>
     <script src="js/owl.carousel.min.js"></script>
-    <script>
-        $('.owl-carousel').owlCarousel({
-            loop: true,
-            margin: 20,
-            // autoWidth: true,
-            nav: true,
-            responsive: {
-                0: {
-                    items: 1
-                },
-                400: {
-                    items: 2
-                },
-                600: {
-                    items: 3
-                }
-            }
-        })
-    </script>
+    
     <script type="text/babel">
         const getMessage = () => "Hello World";
         document.getElementById('output').innerHTML = getMessage();
