--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     </style>
     <link rel="stylesheet" href="css/owl.carousel.min.css">
     <link rel="stylesheet" href="css/owl.theme.default.min.css">
+    <script src="js/films.js"></script>
 </head>
 
 
@@ -414,15 +415,14 @@
             <div>
                 <button id="block-08__book" class="button" type="submit">Забронировать</button>
             </div>
-            <div class="block-08__places">
-            </div>
+            <!-- <div class="block-08__places">
+            </div> -->
         </div>
     </div>
 
     <div id="output"></div>
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
-    <script src="js/films.js"></script>
-    <!-- <script src="js/films_API.js"></script> -->
+    <!-- <script src="js/metrics.js"></script> -->
     <script src="js/getPresent.js"></script>
     <script src="js/jquery-3.4.1.min.js"></script>
     <script src="js/owl.carousel.min.js"></script>
