Добавлено определение города +СА, но нет ручного выбора города

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 </ul>
                 <div class="block-01__your_city">
                     <span>Ваш город:</span>
-                    <span><a href="#">Москва</a></span>
+                    <span id="block-01__city">Выберете город</span>
                 </div>
             </nav>
             <h1>Закажите билет в кино</h1>
