--- a/index.html
+++ b/index.html
@@ -420,6 +420,20 @@
         </div>
     </div>
 
+    <!-- Форма выбора города -->
+    <div id="block-09">
+        <div id="block-09__city-window">
+            <div>
+                <p class="block-09__city_title">Ваш город</p>
+            </div>
+            <div>
+                <input name="city_choose" id="block-09__city-name" placeholder="Введите город">
+            </div>
+            <div id="block-09__search_result">
+            </div>
+        </div>
+    </div>
+
     <div id="output"></div>
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
     <!-- <script src="js/metrics.js"></script> -->
@@ -427,10 +441,10 @@
     <script src="js/jquery-3.4.1.min.js"></script>
     <script src="js/owl.carousel.min.js"></script>
     
-    <script type="text/babel">
+    <!-- <script type="text/babel">
         const getMessage = () => "Hello World";
         document.getElementById('output').innerHTML = getMessage();
-    </script>
+    </script> -->
     
 </body>
 
